--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,31 @@
-
 img{
 	max-width: 100%;
 }
 
-.navbar-brand img{
-	max-width: 100%;
-	height: 30px;
+header{
+	background-color: #f14d91;
 }
 
-.navbar-dark .navbar-nav .nav-link {
-    color: #fff;
+header h1{
+	
+padding: 100px 0;
+	
+text-align: center;
+	
+font-size: 60px;
+	
+color: #fff;
+	
+font-weight: 600;
+	
+text-shadow: 2px 7px 0px #0003;
 }
 
-.sleft{
-	justify-content: flex-end;
+.signup-section{
+	padding: 50px 0;
 }
 
-.search{
-	background: #3f4448;
-    border: none;
-    color: #fff;
-    padding: 0 25px;
-
+.login-section .row{
+	height: 100vh;
+	align-items: center;
 }
-
